plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.3'
}

group = 'Livart'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'com.mysql:mysql-connector-j'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    implementation 'org.springframework.session:spring-session-core'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
    implementation 'org.json:json:20220320'
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
    implementation 'net.nurigo:sdk:4.3.2'
    implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api:2.1.1"
    implementation 'org.apache.poi:poi-ooxml:5.2.3'
    implementation 'org.zeroturnaround:zt-zip:1.14'
    implementation platform("software.amazon.awssdk:bom:2.25.9") // 버전 통합 관리
    implementation "software.amazon.awssdk:ses"
    implementation 'software.amazon.awssdk:core:2.25.2'
    implementation "software.amazon.awssdk:auth"
    implementation 'com.google.guava:guava:33.0.0-jre'


// Jakarta Mail 라이브러리 (HTML 이메일 포맷 등 처리용)
    implementation 'com.sun.mail:jakarta.mail:2.0.1'
}

test {
    useJUnitPlatform()
    testLogging.events = ["PASSED", "FAILED", "SKIPPED"]
}

def querydslDir = "$buildDir/generated/querydsl"

sourceSets {
    main {
        java {
            srcDirs += querydslDir
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
}

task generateQuerydsl(type: JavaCompile) {
    group = "build"
    description = "Generate Q-classes for Querydsl"

    source = sourceSets.main.java
    classpath = configurations.compileClasspath
    destinationDirectory = file(querydslDir)
    options.annotationProcessorPath = configurations.annotationProcessor
    options.compilerArgs += [
            "-proc:only",
            "-processor", "com.querydsl.apt.jpa.JPAAnnotationProcessor"
    ]
}



